--- a/FlickaGram/Base.lproj/Main.storyboard
+++ b/FlickaGram/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aPC-b9-hS8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Yda-Yb-M8V">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -23,7 +23,80 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D9B-ah-M3Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1092" y="-28"/>
+            <point key="canvasLocation" x="-2889" y="-331"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wH6-4w-hdk">
+            <objects>
+                <viewController id="Yda-Yb-M8V" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="adW-px-QSd">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WEt-gY-nNj">
+                                <rect key="frame" x="0.0" y="295.33333333333331" width="390" height="253.33333333333331"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Ksw-fR-N7Z">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="278.33333333333331"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q52-UB-Bwg">
+                                                <rect key="frame" x="0.0" y="0.0" width="390" height="122"/>
+                                                <string key="text">Label
+eryteyeryryeryeryeryerye
+´˳¥eryer
+Label
+eryteyeryryeryeryeryerye
+´˳¥eryer</string>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eYx-h3-eQb">
+                                                <rect key="frame" x="0.0" y="121.99999999999999" width="390" height="34.333333333333329"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kue-OJ-Ke8">
+                                                <rect key="frame" x="0.0" y="156.33333333333337" width="390" height="122"/>
+                                                <string key="text">Label
+eryteyeryryeryeryeryerye
+´˳¥eryer
+Label
+eryteyeryryeryeryeryerye
+´˳¥eryer</string>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.7725490196" green="0.42352941179999998" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Ksw-fR-N7Z" firstAttribute="bottom" secondItem="iq6-WK-kXc" secondAttribute="bottom" id="7fH-Fe-4ch"/>
+                                    <constraint firstItem="Ksw-fR-N7Z" firstAttribute="trailing" secondItem="iq6-WK-kXc" secondAttribute="trailing" id="D7z-Zl-NYs"/>
+                                    <constraint firstItem="Ksw-fR-N7Z" firstAttribute="top" secondItem="iq6-WK-kXc" secondAttribute="top" id="FHF-a8-bx8"/>
+                                    <constraint firstItem="Ksw-fR-N7Z" firstAttribute="leading" secondItem="iq6-WK-kXc" secondAttribute="leading" id="VFY-cK-Mu1"/>
+                                    <constraint firstItem="Ksw-fR-N7Z" firstAttribute="centerX" secondItem="WEt-gY-nNj" secondAttribute="centerX" id="kNT-h3-YqA"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="iq6-WK-kXc"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Lcb-lr-hNx"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ZoE-cP-Uoi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ZoE-cP-Uoi" firstAttribute="trailing" secondItem="WEt-gY-nNj" secondAttribute="trailing" id="U47-GB-j7g"/>
+                            <constraint firstItem="WEt-gY-nNj" firstAttribute="leading" secondItem="ZoE-cP-Uoi" secondAttribute="leading" id="WUh-bT-vYa"/>
+                            <constraint firstItem="WEt-gY-nNj" firstAttribute="centerX" secondItem="adW-px-QSd" secondAttribute="centerX" id="bvh-fJ-rBk"/>
+                            <constraint firstItem="WEt-gY-nNj" firstAttribute="height" secondItem="adW-px-QSd" secondAttribute="height" multiplier="0.3" id="e5h-Lt-JXh"/>
+                            <constraint firstItem="WEt-gY-nNj" firstAttribute="centerY" secondItem="adW-px-QSd" secondAttribute="centerY" id="yAj-pq-LTJ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HTB-3p-B3l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1046" y="-792"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="dzG-BU-FFA">
